# Silica

./: .gitignore  .gitmodules  CMakeLists.txt  CommandInterpreter.cpp  GlobalConfig.cpp  GlobalConfig.h  Image.cpp  Image.h  ImageSource.cpp  ImageSource.h  ImagesCache.cpp  ImagesCache.h  LocalImageSource.cpp  LocalImageSource.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Navigator.cpp  Navigator.h  PlayList.cpp  PlayList.h  README.md  ZipImageSource.cpp  ZipImageSource.h  azure-pipelines-release.yaml  azure-pipelines.yml  main.cpp  silica.pro  silica.qrc
src/: CMakeLists.txt  CommandInterpreter.cpp  CommandInterpreter.h  Definitions.cpp.in  Definitions.h  GlobalConfig.cpp  GlobalConfig.h  Image.cpp  Image.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Navigator.cpp  Navigator.h  PlayList.cpp  PlayList.h  SevenzImageSource.cpp  SevenzImageSource.h  ZipImageSource.cpp  ZipImageSource.h  crashhandler.cmake  main.cpp  sapi.cmake  silica.cmake  silica.pri  silica.pro  silica.qrc  silicacore.cmake  silicaui.cmake
src/assets/: Info.plist  MacOSXBundleInfo.plist.in  Silica.ini.default  logo.icns  migration.json
src/crashhandler/: CrashHandlerDialog.cpp  CrashHandlerDialog.h  CrashHandlerDialog.ui  crashhandler.cpp
src/db/: AbstractQuery.cpp  AbstractQuery.h  AsunaDatabase.cpp  AsunaDatabase.h  Database.cpp  Database.h  ImagesQuery.cpp  ImagesQuery.h  LocalDatabase.cpp  LocalDatabase.h  LocalPlayListRecord.cpp  LocalPlayListRecord.cpp.bak  LocalPlayListRecord.h  LocalPlayListRecord.h.bak  MultiPageReplyIterator.cpp  MultiPageReplyIterator.h  PlayListEntityData.h  PlayListRecord.cpp  PlayListRecord.h  RemoteDatabase.cpp  RemoteDatabase.h  RemotePlayListRecord.cpp  RemotePlayListRecord.h  SQLiteLocalDatabase.cpp  SQLiteLocalDatabase.h
src/image/: Image.cpp  Image.h  ImageHistogram.cpp  ImageHistogram.h  ImageHotspot.cpp  ImageHotspot.h  ImageInfo.h  ImageRank.cpp  ImageRank.h  ImageSource.cpp  ImageSource.h  ImageSourceFactory.cpp  ImageSourceFactory.h  ImageSourceManager.cpp  ImageSourceManager.h  ImageThumbnailBlockLoader.cpp  ImageThumbnailBlockLoader.h  ImagesCache.cpp  ImagesCache.h
src/keychain/: KeyChain.cpp  KeyChain.h  KeyChain_Win.cpp
src/logger/: LogBuilder.cpp  LogBuilder.h  LogRecord.h  Logger.cpp  Logger.h
src/navigation/: AbstractNavigationPlayer.cpp  AbstractNavigationPlayer.h  CascadeClassifierNavigationPlayer.cpp  CascadeClassifierNavigationPlayer.h  ExpandingNavigationPlayer.cpp  ExpandingNavigationPlayer.h  FixedRegionConfDialog.cpp  FixedRegionConfDialog.h  FixedRegionConfDialog.ui  FixedRegionNavigationPlayer.cpp  FixedRegionNavigationPlayer.h  HotspotsNavigationPlayer.cpp  HotspotsNavigationPlayer.h  MangaNavigationPlayer.cpp  MangaNavigationPlayer.h  NavigationPlayerManager.cpp  NavigationPlayerManager.h  NavigatorSynchronizer.cpp  NavigatorSynchronizer.h  NormalNavigationPlayer.cpp  NormalNavigationPlayer.h
src/playlist/: AbstractPlayListFilter.cpp  AbstractPlayListFilter.h  DoNothingFilter.cpp  DoNothingFilter.h  EqualRankFilter.cpp  EqualRankFilter.h  FileSystemPlayListEntity.cpp  FileSystemPlayListEntity.h  FileSystemPlayListProvider.cpp  FileSystemPlayListProvider.h  LocalPlayListEntity.cpp  LocalPlayListEntity.h  LocalPlayListProvider.cpp  LocalPlayListProvider.h  LocalPlayListProviderFactory.cpp  LocalPlayListProviderFactory.h  MinRankFilter.cpp  MinRankFilter.h  NotEqualRankFilter.cpp  NotEqualRankFilter.h  PlayListEntity.cpp  PlayListEntity.h  PlayListEntityLoadContext.h  PlayListEntityOption.h  PlayListEntityTriggerResult.h  PlayListProvider.h  PlayListProviderFactory.h  PlayListProviderManager.cpp  PlayListProviderManager.h  PlayListProviderOption.h  PlayListRecord.cpp  PlayListRecord.h  PlayListRecordInfo.h
src/sapi/: IImageEffectPlugin.cpp  IImageEffectPlugin.h  IImageSource.cpp  IImageSource.h  IImageSourceFactory.cpp  IImageSourceFactory.h  IImageSourcePlugin.cpp  IImageSourcePlugin.h  INavigationPlayer.cpp  INavigationPlayer.h  INavigationPlayerPlugin.cpp  INavigationPlayerPlugin.h  IPlayListEntity.cpp  IPlayListEntity.h  IPlayListEntityLoadContext.h  IPlayListProvider.cpp  IPlayListProvider.h  IPlayListProviderPlugin.cpp  IPlayListProviderPlugin.h  ISharer.cpp  ISharer.h  ISharerPlugin.cpp  ISharerPlugin.h  ImageDelegate.cpp  ImageDelegate.h  ImageEffectDelegate.cpp  ImageEffectDelegate.h  ImageResource.h  ImageSourceDelegate.cpp  ImageSourceDelegate.h  ImageSourceFactoryDelegate.cpp  ImageSourceFactoryDelegate.h  LoadingIndicator.cpp  LoadingIndicator.h  LoadingIndicatorDelegate.cpp  LoadingIndicatorDelegate.h  LoadingIndicatorPrivate.h  Logging.cpp  Logging.h  LoggingPrivate.h  (+25 more)
src/share/: SaveToSharer.cpp  SaveToSharer.h  Sharer.h  SharerManager.cpp  SharerManager.h
src/ui/: AbstractGalleryItemModel.h  BasketView.cpp  BasketView.h  FileSystemItem.cpp  FileSystemItem.h  FileSystemView.cpp  FileSystemView.h  GalleryItem.cpp  GalleryItem.h  GalleryView.cpp  GalleryView.h  HotspotsEditor.cpp  HotspotsEditor.h  ImageGalleryItem.cpp  ImageGalleryItem.h  ImageGalleryItemModel.cpp  ImageGalleryItemModel.h  ImageGalleryView.cpp  ImageGalleryView.h  ImagePathCorrectorClientImpl.cpp  ImagePathCorrectorClientImpl.h  ImagePathCorrectorDialog.cpp  ImagePathCorrectorDialog.h  ImagePathCorrectorDialog.ui  ImageSourceManagerClientImpl.cpp  ImageSourceManagerClientImpl.h  LoadingIndicator.cpp  LoadingIndicator.h  MainGraphicsView.cpp  MainGraphicsView.h  (+28 more)
test/: AsunaDatabase_Tests.cpp  CMakeLists.txt  Definitions_Tests.cpp  ImageGalleryItem_Tests.cpp  ImageHistogram_Tests.cpp  ImageRank_Tests.cpp  ImageSource_Tests.cpp  Image_Tests.cpp  LocalDatabase_Tests.cpp  MultiPageReplyIterator_Tests.cpp  PlayList_Tests.cpp  STestCase.cpp  STestCase.h  TestAsunaDatabase.cpp  TestAsunaDatabase.h  TestImage.cpp  TestImage.h  TestImageRank.cpp  TestImageRank.h  TestImageSource.cpp  TestImageSource.h  TestLocalDatabase.cpp  TestLocalDatabase.h  TestMultiPageReplyIterator.cpp  TestMultiPageReplyIterator.h  TestPlayList.cpp  TestPlayList.h  TestZipImageSource.cpp  TestZipImageSource.h  silicatest.cpp  silicatest.pri  silicatest.pro  silicatest.qrc
(+168 files in other folders)
